attempting to fix gradient secondary color not showing up on mobile

--- a/src/Components/Swiper/Swiper.scss
+++ b/src/Components/Swiper/Swiper.scss
@@ -111,7 +111,7 @@
             top: 0;
             left: 0;
             right: 0;
-            bottom: -0.2rem;
+            bottom: -0.34rem;
             z-index: -1; 
             background-color: $color-main;
             border: 1px solid $color-main;
